--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,38 +1,38 @@
 {
 	"version": "2.0.0",
 	"tasks": [
-	  {
-		"label": "React Dev Server",
-		"type": "shell",
-		"command": "while [ ! -d './apps/web/node_modules/react' ]; do echo 'Waiting for dependencies to be installed...'; sleep 2; done && cd apps/web && pnpm dev",
-		"isBackground": true,
-		"problemMatcher": {
-		  "owner": "typescript",
-		  "pattern": {
-			"regexp": ".",
-			"file": 1,
-			"location": 2,
-			"message": 3
-		  },
-		  "background": {
-			"activeOnStart": true,
-			"beginsPattern": ".",
-			"endsPattern": "VITE v\\d+\\.\\d+\\.\\d+\\s+ready"
-		  }
-		},
-		"presentation": {
-		  "echo": true,
-		  "reveal": "always",
-		  "focus": false,
-		  "panel": "dedicated",
-		  "clear": false,
-		  "showReuseMessage": false,
-		  "group": "development",
-		  "icon": {
-			"id": "react",
-			"color": "terminal.ansiBlue"
-		  }
+		{
+			"label": "Frontend: Web SPA",
+			"type": "shell",
+			"command": "cd apps/web && [ -d 'node_modules' ] || pnpm install && pnpm dev",
+			"isBackground": true,
+			"problemMatcher": {
+				"owner": "typescript",
+				"pattern": {
+					"regexp": ".",
+					"file": 1,
+					"location": 2,
+					"message": 3
+				},
+				"background": {
+					"activeOnStart": true,
+					"beginsPattern": ".",
+					"endsPattern": "VITE v\\d+\\.\\d+\\.\\d+\\s+ready"
+				}
+			},
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "dedicated",
+				"clear": false,
+				"showReuseMessage": false,
+				"group": "development",
+			},
+			"icon": {
+				"id": "browser",
+				"color": "terminal.ansiGreen"
+			}
 		}
-	  }
 	]
-  }
+}
