--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,38 +1,60 @@
 {
 	"version": "2.0.0",
 	"tasks": [
-		{
-			"label": "Frontend: Web SPA",
-			"type": "shell",
-			"command": "cd apps/web && [ -d 'node_modules' ] || pnpm install && pnpm dev",
-			"isBackground": true,
-			"problemMatcher": {
-				"owner": "typescript",
-				"pattern": {
-					"regexp": ".",
-					"file": 1,
-					"location": 2,
-					"message": 3
-				},
-				"background": {
-					"activeOnStart": true,
-					"beginsPattern": ".",
-					"endsPattern": "VITE v\\d+\\.\\d+\\.\\d+\\s+ready"
-				}
-			},
-			"presentation": {
-				"echo": true,
-				"reveal": "always",
-				"focus": false,
-				"panel": "dedicated",
-				"clear": false,
-				"showReuseMessage": false,
-				"group": "development",
-			},
-			"icon": {
-				"id": "browser",
-				"color": "terminal.ansiGreen"
-			}
+	  {
+		"label": "Setup Environment",
+		"type": "shell",
+		"command": "pnpm setup",
+		"presentation": {
+		  "reveal": "always",
+		  "panel": "shared"
+		},
+		"icon": {
+		  "id": "package",
+		  "color": "terminal.ansiBlue"
 		}
+	  },
+	  {
+		"label": "Frontend: Web SPA",
+		"type": "shell",
+		"command": "cd apps/web && [ -d 'node_modules' ] || pnpm install && pnpm dev",
+		"isBackground": true,
+		"problemMatcher": {
+		  "owner": "typescript",
+		  "pattern": {
+			"regexp": ".",
+			"file": 1,
+			"location": 2,
+			"message": 3
+		  },
+		  "background": {
+			"activeOnStart": true,
+			"beginsPattern": ".",
+			"endsPattern": "VITE v\\d+\\.\\d+\\.\\d+\\s+ready"
+		  }
+		},
+		"presentation": {
+		  "echo": true,
+		  "reveal": "always",
+		  "focus": false,
+		  "panel": "dedicated",
+		  "clear": false,
+		  "showReuseMessage": false,
+		  "group": "development"
+		},
+		"icon": {
+		  "id": "browser",
+		  "color": "terminal.ansiGreen"
+		}
+	  },
+	  {
+		"label": "Start All Services",
+		"dependsOn": ["Setup Environment", "Frontend: Web SPA"],
+		"problemMatcher": [],
+		"icon": {
+		  "id": "play",
+		  "color": "terminal.ansiMagenta"
+		}
+	  }
 	]
-}
+  }
