--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,6 +4,7 @@
   "description": "Shared utilities for Scribe",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "dev": "tsc --watch",
     "build": "tsc",
@@ -17,6 +18,7 @@
   "packageManager": "pnpm@10.7.1",
   "devDependencies": {
     "eslint": "^9.24.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.29.0"
   }
 }
