--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,7 +24,8 @@
 				"spmeesseman.vscode-taskexplorer",
 				"dbaeumer.vscode-eslint",
 				"esbenp.prettier-vscode",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"GitHub.vscode-github-actions"
 			],
 			"settings": {
 			  "terminal.integrated.defaultProfile.linux": "bash"
