--- a/infra/docker/dev/docker-compose.yml
+++ b/infra/docker/dev/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3.8'
 services:
   app:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ../../../
+      dockerfile: ./infra/docker/dev/Dockerfile 
     volumes:
-      - .:/workspaces/Scribe
+      - ../../../:/workspaces/Scribe 
       - app-node-modules:/workspaces/Scribe/node_modules
       - app-web-node-modules:/workspaces/Scribe/apps/web/node_modules
       - app-shared-node-modules:/workspaces/Scribe/packages/shared/node_modules
