refactor: reorganize project structure with infra directory
- Move Docker configurations to infra/docker
- Add utility scripts to infra/scripts
- Create documentation for CI/CD in infra/ci
- Configure Jest testing in infra/testing
- Add GitHub Issue and PR templates
- Update .gitignore to exclude Docker artifacts
- Add convenience scripts in package.json for Docker commands

This change improves the maintainability of the project by separating
application code from infrastructure configuration, making it easier
to scale and manage the monorepo structure.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,8 @@
 	"image": "mcr.microsoft.com/devcontainers/base:jammy",
 	"features": {
 		"ghcr.io/devcontainers-extra/features/node-asdf:0": {},
-		"ghcr.io/devcontainers-extra/features/pnpm:2": {}
+		"ghcr.io/devcontainers-extra/features/pnpm:2": {},
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {}			
 	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
@@ -25,7 +26,9 @@
 				"dbaeumer.vscode-eslint",
 				"esbenp.prettier-vscode",
 				"ms-azuretools.vscode-docker",
-				"GitHub.vscode-github-actions"
+				"GitHub.vscode-github-actions",
+				"GitHub.github-vscode-theme",
+				"PKief.material-icon-theme"
 			],
 			"settings": {
 			  "terminal.integrated.defaultProfile.linux": "bash"
