--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-	"name": "Scribe",
-	"private": true,
-	"version": "0.1.0",
-	"scripts": {
-	  "setup": "pnpm install && pnpm -r install",
-	  "dev": "pnpm --filter web dev",
-	  "dev:all": "pnpm -r --parallel dev",
-	  "build": "pnpm -r build",
-	  "lint": "pnpm -r lint",
-	  "test": "pnpm -r test",
-	  "clean": "pnpm -r exec -- rm -rf node_modules dist .turbo && rm -rf node_modules"
-	}
+  "name": "scribe",
+  "private": true,
+  "version": "0.1.0",
+  "scripts": {
+    "setup": "pnpm install && pnpm -r install",
+    "dev": "pnpm --filter web dev",
+    "dev:all": "pnpm -r --parallel dev",
+    "build": "pnpm -r build",
+    "lint": "pnpm -r lint",
+    "test": "pnpm -r test",
+    "clean": "pnpm -r exec -- rm -rf node_modules dist .turbo && rm -rf node_modules",
+    "docker:up": "docker-compose -f infra/docker/docker-compose.yml up -d",
+    "docker:down": "docker-compose -f infra/docker/docker-compose.yml down",
+    "docker:logs": "docker-compose -f infra/docker/docker-compose.yml logs -f"
   }
+}
