feat: add Code Climate integration
- Add Code Climate configuration (.codeclimate.yml)
- Create utility script for local code analysis
- Add npm scripts for quality checks
- Update .gitignore to exclude HTML reports
- Configure code quality thresholds and checks

Enables automated code quality analysis, identifies common issues
like code duplication, complexity, and style inconsistencies.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,3 +49,11 @@ jobs:
 
       - name: Test
         run: pnpm test
+      
+      - name: Code Climate Coverage Action
+        uses: paambaati/codeclimate-action@v5.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageLocations: |
+            ${{github.workspace}}/coverage/lcov.info:lcov
