--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "build": "pnpm -r build",
     "lint": "pnpm -r lint",
     "test": "pnpm -r test",
+    "test:coverage": "pnpm -r test:coverage",
     "clean": "pnpm -r exec -- rm -rf node_modules dist .turbo && rm -rf node_modules",
     "docker:up": "docker-compose -f infra/docker/docker-compose.yml up -d",
     "docker:down": "docker-compose -f infra/docker/docker-compose.yml down",
     "docker:logs": "docker-compose -f infra/docker/docker-compose.yml logs -f",
     "quality": "./infra/scripts/code-climate.sh analyze",
     "quality:open": "./infra/scripts/code-climate.sh analyze -f html > codeclimate.html && open codeclimate.html"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.3.1"
   }
 }
