--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -9,7 +9,8 @@
     "dev": "tsc --watch",
     "build": "tsc",
     "lint": "eslint src --ext .ts",
-    "test": "echo \"Tests not implemented\" && exit 0",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "clean": "rm -rf dist node_modules"
   },
   "keywords": [],
