--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -6,7 +6,8 @@
 	  "declaration": true,
 	  "outDir": "./dist",
 	  "strict": true,
-	  "esModuleInterop": true
+	  "esModuleInterop": true,
+	  "types": ["node", "jest"]
 	},
 	"include": ["src"]
-  }
+}
