refactor(test): move tests to project root with mirror structure
- Relocated all tests to `__tests__` directory at project root
- Implemented mirror structure for tests to match source code organization
- Updated Jest configuration to work with new test location
- Moved Jest configuration file to infra directory for better organization

This change improves test discoverability and maintains a clear relationship
between source files and their corresponding tests.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dev:all": "pnpm -r --parallel dev",
     "build": "pnpm -r build",
     "lint": "pnpm -r lint",
-    "test": "pnpm -r test",
-    "test:coverage": "pnpm -r test:coverage",
+    "test": "jest --config infra/testing/jest.config.js",
+    "test:watch": "jest --config infra/testing/jest.config.js --watch",
+    "test:coverage": "jest --config infra/testing/jest.config.js --coverage",
     "clean": "pnpm -r exec -- rm -rf node_modules dist .turbo && rm -rf node_modules",
     "docker:up": "docker-compose -f infra/docker/docker-compose.yml up -d",
     "docker:down": "docker-compose -f infra/docker/docker-compose.yml down",
