chore(deps): update project dependencies and configuration
Update package.json, pnpm-lock.yaml and vite configuration to ensure project compatibility with latest tooling

--- a/package.json
+++ b/package.json
@@ -8,25 +8,31 @@
     "dev:all": "pnpm -r --parallel dev",
     "build": "pnpm -r build",
     "lint": "pnpm -r lint",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "typecheck": "pnpm -r exec tsc --noEmit",
+    "precommit": "lint-staged",
+    "release": "changeset publish",
     "test": "jest --config infra/testing/jest.config.js",
     "test:watch": "jest --config infra/testing/jest.config.js --watch",
     "test:coverage": "jest --config infra/testing/jest.config.js --coverage",
     "clean": "pnpm -r exec -- rm -rf node_modules dist .turbo && rm -rf node_modules",
-    "docker:up": "docker-compose -f infra/docker/docker-compose.yml up -d",
-    "docker:down": "docker-compose -f infra/docker/docker-compose.yml down",
-    "docker:logs": "docker-compose -f infra/docker/docker-compose.yml logs -f",
     "quality": "./infra/scripts/code-climate.sh analyze",
     "quality:html": "./infra/scripts/code-climate.sh analyze -f html",
     "quality:html:open": "./infra/scripts/code-climate.sh analyze -f html -o",
     "quality:json": "./infra/scripts/code-climate.sh analyze -f json",
-    "quality:init": "./infra/scripts/code-climate.sh engines:install"
+    "quality:init": "./infra/scripts/code-climate.sh engines:install",
+    "docker:up": "docker-compose -f infra/docker/docker-compose.yml up -d",
+    "docker:down": "docker-compose -f infra/docker/docker-compose.yml down",
+    "docker:logs": "docker-compose -f infra/docker/docker-compose.yml logs -f",
+    "docker:build": "docker-compose -f infra/docker/docker-compose.yml build",
+    "docker:ps": "docker-compose -f infra/docker/docker-compose.yml ps"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.14.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.3.1"
+    "ts-jest": "^29.3.2"
   }
 }
