feat(db): add PostgreSQL database integration
- Add PostgreSQL service to docker-compose configuration
- Configure database connection with Prisma client
- Add database management scripts to package.json

This commit sets up the initial database infrastructure for the Scribe application,
including Docker configuration and necessary utility scripts for migrations and
database management.

--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -13,8 +13,21 @@ services:
     command: pnpm dev
     environment:
       - NODE_ENV=development
+  postgres:
+    image: postgres:17
+    container_name: scribe-postgres
+    restart: always
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: scribe
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
 volumes:
+  postgres-data:
   app-node-modules:
   app-web-node-modules:
   app-shared-node-modules:
