--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "docker:down": "docker-compose -f infra/docker/docker-compose.yml down",
     "docker:logs": "docker-compose -f infra/docker/docker-compose.yml logs -f",
     "docker:build": "docker-compose -f infra/docker/docker-compose.yml build",
-    "docker:ps": "docker-compose -f infra/docker/docker-compose.yml ps"
+    "docker:ps": "docker-compose -f infra/docker/docker-compose.yml ps",
+    "db:test": "cd services/api && pnpm test-db",
+    "db:migrate": "cd services/api && pnpm migrate:dev",
+    "db:studio": "cd services/api && pnpm studio"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
@@ -34,5 +37,9 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.3.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.6.0",
+    "prisma": "^6.6.0"
   }
 }
